making the code base compatible with JDK 11